--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossOrigin="anonymous"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-adsense-account" content="ca-pub-7180321766040101">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7180321766040101"
+     crossorigin="anonymous"></script>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
